--- a/lib/moba_web/templates/arena/_duels.html.heex
+++ b/lib/moba_web/templates/arena/_duels.html.heex
@@ -1,4 +1,4 @@
-<div class="card duels">
+<div class="card duels" phx-hook="EqualHeight" phx-target=".matchmaking">
     <div class="card-body p-0">
         <%= if @pending_duel do %>
             <%= live_redirect to: Routes.live_path(@socket, MobaWeb.DuelLive, @pending_duel), class: "btn btn-block btn-lg btn-outline-danger col-xl-4 margin-auto my-3" do %>
@@ -43,7 +43,7 @@
                 <div class="history mt-3">
                     <table class="table-dark table mb-0">
                         <%= for duel <- @duels do %>
-                            <%= render "_duel_row.html", duel: duel, opponent: opponent_for(duel, @current_player), battles: @duel_battles, player_id: @current_player.id, socket: @socket %>
+                            <%= render "_duel_row.html", duel: duel, opponent: opponent_for(duel, @current_player), player_id: @current_player.id, socket: @socket %>
                         <% end %>
                     </table>
                 </div>
