--- a/lib/moba_web/templates/arena/_pvp_progression.html.heex
+++ b/lib/moba_web/templates/arena/_pvp_progression.html.heex
@@ -1,30 +1,48 @@
 <div class="card dark-bg mb-3" id="pvp-progression">
     <div class="card-body pb-0">
         <div class="row mt-3 mb-3 d-flex justify-content-center">
-            <%= if next = next_pvp_tier(@current_player) do %>
-                <div class="col pvp-tier-container text-center">
-                    <img src={"/images/pvp/#{@current_player.pvp_tier}.png"} class="pvp-rank"/>
-                    <h4 class={"my-0 text-uppercase text-white f-rpg shadow-medal-#{@current_player.pvp_tier}"}><%= Moba.pvp_tiers[@current_player.pvp_tier] %></h4>
+            <div class="col-8">
+                <h4 class="text-center mb-0 mt-0 f-rpg">Immortal</h4>
+                <div class="progress mt-3" style="height:50px;">
+                    <div style={"width:#{daily_matches_percentage(@current_player)}%;"} class="progress-bar pvp-bar"></div>
+                    <h5 class="justify-content-center d-flex position-absolute w-100 text-white" style="margin-top: 18px">
+                        <%= @current_player.daily_matches %> / <%= Moba.daily_match_limit() %> Daily Matches
+                    </h5>
                 </div>
-                <div class="col-8">
-                    <h4 class="text-center mb-0 mt-0">Earn Season Points by playing on Matchmaking or by Dueling other players</h4>
-                    <div class="progress mt-3" style="height:50px;">
-                        <div style={"width:#{next_pvp_tier_percentage(@current_player)}%;"} class="progress-bar pvp-bar"></div>
-                        <h5 class="justify-content-center d-flex position-absolute w-100 text-white" style="margin-top: 18px" data-toggle="tooltip" title={"#{@current_player.pvp_points}/#{Game.pvp_points_for(next)} Season Points"}>
-                            <%= Game.pvp_points_for(next) - @current_player.pvp_points %> Season Points to next rank
-                        </h5>
+                <div class="mt-4 d-flex justify-content-between align-items-center">
+                    <div>
+                        <a class="btn btn-light">
+                            <i class="fa fa-info mr-1 fa-2x"></i><br/>Arena Info
+                        </a>
+                        <%= if Game.can_clear_auto_matches?(@current_player) do %>
+                            <a href="javascript:;" data-toggle="tooltip" title="Remove all daily matches from auto matchmaking." phx-click="clear-auto-matches" class="btn btn-light"><i class="fa fa-remove fa-2x mr-1"></i><br/>Clear Auto Matches</a>
+                        <% end %>
+                    </div>
+                    <div>
+                        <div class="custom-control custom-switch">
+                            <input type="checkbox" class="custom-control-input" id="toggle-auto-matchmaking" phx-click="show-farm-tabs" checked={@current_player.preferences.auto_matchmaking}>
+                            <label class="custom-control-label" for="toggle-auto-matchmaking">Auto Matchmaking</label>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <h3 class="info-box text-success" data-toggle="tooltip" title="Season Points">
+                            <span class="f-rpg"><%= @current_player.pvp_points %></span>
+                            <br/>
+                            <small class="text-muted">SP</small>
+                        </h3>
+                        <h3 class="info-box text-primary" data-toggle="tooltip" title={"Total Matches: #{@current_player.total_matches}. Total Wins: #{@current_player.total_wins}"}>
+                            <span class="f-rpg"><%= PlayerView.total_win_rate(@current_player) %></span>
+                            <br/>
+                            <small class="text-muted">Total Win Rate</small>
+                        </h3>
+                        <h3 class="info-box text-warning">
+                            <span class="f-rpg"><%= PlayerView.daily_win_rate(@current_player) %></span>
+                            <br/>
+                            <small class="text-muted">Daily Win Rate</small>
+                        </h3>
                     </div>
                 </div>
-                <div class="col pvp-tier-container text-center">
-                    <img src={"/images/pvp/#{next}.png"} class="pvp-rank"/>
-                    <h4 class={"my-0 text-uppercase text-white f-rpg shadow-medal-#{next}"}><%= Moba.pvp_tiers[next] %></h4>
-                </div>
-            <% else %>
-                <div class="col text-center">
-                    <img src={"/images/pvp/#{@current_player.pvp_tier}.png"} class="pvp-rank"/>
-                    <h4 class="my-0 text-uppercase text-white f-rpg"><%= Moba.pvp_tiers[@current_player.pvp_tier] %></h4>
-                </div>
-            <% end %>
+            </div>
         </div>
     </div>
 </div>
