--- a/lib/moba_web/templates/arena/index.html.heex
+++ b/lib/moba_web/templates/arena/index.html.heex
@@ -11,7 +11,7 @@
                     <%= render "_matchmaking.html", assigns %>
                 </div>
                 <div class="col">
-                    <%= render "_matchmaking.html", assigns %>
+                    <%= render "_ranking.html", assigns %>
                 </div>
 
                 <%= unless silenced?(assigns) do %>
