--- a/lib/moba_web/templates/arena/_duels.html.heex
+++ b/lib/moba_web/templates/arena/_duels.html.heex
@@ -1,4 +1,4 @@
-<div class="card duels" phx-hook="EqualHeight" phx-target=".matchmaking">
+<div class="card duels" phx-hook="EqualHeight" phx-target=".ranking" id="pvp_duels">
     <div class="card-body p-0">
         <%= if @pending_duel do %>
             <%= live_redirect to: Routes.live_path(@socket, MobaWeb.DuelLive, @pending_duel), class: "btn btn-block btn-lg btn-outline-danger col-xl-4 margin-auto my-3" do %>
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <%= if length(@duel_opponents) > 0 do %>
-                <table class="table-dark table mt-3">
+                <table class="table-dark table">
                     <%= for player <- @duel_opponents do %>
                         <tr id={"player-#{player.id}"}>
                             <td class="text-right">
@@ -40,7 +40,7 @@
             <% end %>
 
             <%= if length(@duels) > 0 do %>
-                <div class="history mt-3">
+                <div class="history">
                     <table class="table-dark table mb-0">
                         <%= for duel <- @duels do %>
                             <%= render "_duel_row.html", duel: duel, opponent: opponent_for(duel, @current_player), player_id: @current_player.id, socket: @socket %>
